fix(tab-item): compensate flex gap on hidden bold-width pseudo-element

--- a/packages/components/src/components/tab-item/tab-item.scss
+++ b/packages/components/src/components/tab-item/tab-item.scss
@@ -44,6 +44,7 @@
 			line-height: 0;
 			padding: 0;
 			margin: 0;
+			margin-inline-start: calc(-1 * variables.$db-spacing-fixed-xs);
 			overflow: hidden;
 			visibility: hidden;
 		}
